[package]
name = "rval"
version = "0.1.0"
authors = ["Taisuke Miyazaki <imishinist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
clap = "2.33.3"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
